# FFMpegPlayerExample

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
res/: noise.avi  noise.c  noise.h  wiiu_background.xcf
src/: main.cpp  video_player.cpp  video_player.h
